Move extra settings to their own <div>s Also, fix alignment of range inputs in settings

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1129,6 +1129,10 @@ article .body {
     display: block;
 }
 
+.panel-body article input[type="range"] {
+    vertical-align: middle;
+}
+
 .no-p-margin p {
     margin: 0 !important;
 }
